--- a/storefront-child/build_assets/scss/blocks/_hero.scss
+++ b/storefront-child/build_assets/scss/blocks/_hero.scss
@@ -112,6 +112,7 @@
                 h1 {
                 margin-bottom: 28px;
                 color: #525354;
+                font-weight: 400;
 
                     @media (max-width: 1000px) {
                         margin-bottom: 23px;
