--- a/storefront-child/build_assets/scss/blocks/_header.scss
+++ b/storefront-child/build_assets/scss/blocks/_header.scss
@@ -54,6 +54,10 @@
                 padding: 15px 0 15px 0;
                 position: relative;
 
+                a {
+                    margin-left: 50px;
+                }
+
                 &::after {
                     content: '';
                     width: 100%;
@@ -468,11 +472,28 @@
                             height: 136px;
                             width: 136px;
                             border-radius: 12px;
-                            background-position: center center;
-                            background-size: cover;
                             position: relative;
 
+                            &__img {
+                                height: 136px;
+                                width: 136px;
+                                border-radius: 12px;
+                                background-position: center center;
+                                background-size: cover;
+                                position: absolute;
+                                z-index: 1;
+                                top: 0;
+                                left: 0;
+                                right: 0;
+                                bottom: 0;
+                                &:hover {
+                                    filter: grayscale(100%);
+                                }
+                            }
+
                             .badge-container {
+                                position: absolute;
+                                z-index: 2;
                                 width: fit-content;
                                 position: absolute;
                                 bottom: 15px;
