--- a/storefront-child/build_assets/scss/blocks/_shop.scss
+++ b/storefront-child/build_assets/scss/blocks/_shop.scss
@@ -461,22 +461,39 @@
             &__image {
                 width: 100%;
                 height: 228px;
-                background-position: center;
-                background-size: cover;
                 border-radius: 20px;
                 opacity: 1;
                 position: relative;
 
-                &:hover {
-                    filter: grayscale(100%);
+                &__img {
+                    width: 100%;
+                    height: 228px;
+                    background-position: center;
+                    background-size: cover;
+                    border-radius: 20px;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    z-index: 1;
+                    &:hover {
+                        filter: grayscale(100%);
+                    }
                 }
 
                 @media (max-width: $tablet) {
                     height: 224px;
+                    &__img {
+                        height: 224px;
+                    }
                 }
 
                 @media (max-width: $mobile) {
                     height: 187px;
+                    &__img {
+                        height: 187px;
+                    }
                 }
 
                 ul {
@@ -487,6 +504,7 @@
                     left: 12px;
                     margin: 0;
                     column-gap: 8px;
+                    z-index: 2;
                     li {
                         font-size: 6px;
                         font-weight: 400;
