--- a/storefront-child/build_assets/scss/blocks/_product-infos.scss
+++ b/storefront-child/build_assets/scss/blocks/_product-infos.scss
@@ -53,6 +53,9 @@
             align-items: center;
             justify-content: center;
             left: calc(50% - 16px);
+            &:hover {
+                background-color: $seaFoam;
+            }
         }
         p{
             color:#fff;
