--- a/storefront-child/build_assets/scss/blocks/_baloon-columns.scss
+++ b/storefront-child/build_assets/scss/blocks/_baloon-columns.scss
@@ -4,20 +4,13 @@
     margin: 0 auto;
     padding: 48px 40px;
     @media (max-width: 1400px) {
-        padding: 48px 0;
-        max-width: 959px;
-    }
-    @media (max-width: 1390px) {
-        max-width: 1200px;
+        padding: 48px 40px;
+        max-width: 1330px;
     }
     @media (max-width: 1000px) {
-        max-width: 704px;
+        max-width: 100%;
     }
     @media (max-width: 768px) {
-        padding: 32px 0;
-    }
-    @media (max-width: 758px) {
-        max-width: 100%;
         padding: 32px 32px;
     }
     @media (max-width: $mobile) {
@@ -286,6 +279,20 @@
         }
     }
 
+    &__slider-container {
+        &__top-title {
+            @media (max-width: 758px) {
+                text-align: center;
+                font-size: 22px;
+                font-weight: 300;
+                margin-bottom: 24px;
+            } 
+            @media (max-width: $mobile) {
+                text-align: left;
+            }
+        }
+    }
+
     &__text {
         margin: 0 auto;
         margin-top: 31px;
@@ -346,14 +353,103 @@
         }
     } 
 
+    &__no-slider {
+        display: flex;
+        justify-content: space-between;
+        @media (max-width: 758px) {
+            display: none;
+        }
+        &__image {
+            cursor: pointer;
+            width: 128px;
+            height: 494px;
+            transition: width 0.5s ease;
+            border-radius: 40px;
+            @media (max-width: 1400px) {
+                width: 10%;
+            }
+            @media (max-width: 1024px) {
+                height: 380px;
+                border-radius: 30px;
+            }
+            @media (max-width: 800px) {
+                height: 297px;
+                border-radius: 20px;
+            }
+            img {
+                height: 100%;
+                object-fit: cover;
+                border-radius: 40px;
+                @media (max-width: 1024px) {
+                    border-radius: 30px;
+                }
+                @media (max-width: 800px) {
+                    border-radius: 20px;
+                }
+            }
+            &.active {
+                width: 744px;
+                height: 494px;
+                border-radius: 40px;
+                transition: width 0.5s ease;
+                @media (max-width: 1400px) {
+                    width: 55%;
+                }
+                @media (max-width: 1024px) {
+                    height: 380px;
+                    border-radius: 30px;
+                }
+                @media (max-width: 800px) {
+                    height: 297px;
+                    border-radius: 20px;
+                }
+            }
+
+        }
+    }
+
     &__swiper {
         opacity: 0;
         // transition: opacity 0.5s ease;
         // &.hide-slider {
         //     opacity: 0;
         //     pointer-events: none; /* Prevent interaction with hidden elements */
-        // } 
+        // }
         transition: opacity 0.4s ease-in-out;
+        @media (max-width: 1330px) {
+            max-width: 1180px;
+            margin: 0 auto;
+        }
+        @media (max-width: 1257px) {
+            max-width: 1100px;
+        }
+        @media (max-width: 1175px) {
+            max-width: 1020px;
+        }
+        @media (max-width: 1100px) {
+            max-width: 945px;
+        }
+        @media (max-width: 1024px) {
+            max-width: 918px;
+        }
+        @media (max-width: 1000px) {
+            max-width: 870px;
+        }
+        @media (max-width: 945px) {
+            max-width: 830px;
+        }
+        @media (max-width: 915px) {
+            max-width: 785px;
+        }
+        @media (max-width: 863px) {
+            max-width: 735px;
+        }
+        @media (max-width: 818px) {
+            max-width: 700px;
+        }
+        @media (max-width: 768px) {
+            max-width: 100%;
+        }
         &.slick-initialized {
             opacity: 1;
         }
@@ -371,17 +467,33 @@
             border-radius: 40px;
             transition: width 0.5s ease-in-out;
             @media (max-width: 1400px) {
-                width: 93px;
+                width: 122px;
                 border-radius: 30px;
             }
-            @media (max-width: 1390px) {
-                width: 128px;
+            @media (max-width: 1175px) {
+                width: 102px;
             }
-            @media (max-width: 1000px) {
+            @media (max-width: 1024px) {
+                width: 93px;
+                height: 380px !important;
+            }
+            @media (max-width: 915px) {
+                width: 81px;
+            }
+            @media (max-width: 818px) {
+                width: 72px;
+            }
+            @media (max-width: 776px) {
+                width: 70px;
+            }
+            @media (max-width: 768px) {
                 width: 68px;
                 height: 297px !important;
                 border-radius: 20px;
                 margin-right: 12px;
+            }
+            @media (max-width: 766px) {
+                width: 66px;
             }
             img {
                 width: 100%;
@@ -390,10 +502,10 @@
                 object-position: center center;
                 border-radius: 40px;
                 z-index: -1;
-                @media (max-width: 1400px) {
+                @media (max-width: 1024px) {
                     border-radius: 30px;
                 }
-                @media (max-width: 1000px) {
+                @media (max-width: 768px) {
                     border-radius: 20px;
                 }
             }
@@ -403,12 +515,30 @@
                 transition: width 0.5s ease-in-out;
 
                 @media (max-width: 1400px) {
-                    width: 523px;
+                    width: 700px;
                 }
-                @media (max-width: 1390px) {
-                    width: 623px;
+                @media (max-width: 1330px) {
+                    width: 630px;
+                }
+                @media (max-width: 1257px) {
+                    width: 548px;
+                }
+                @media (max-width: 1100px) {
+                    width: 470px;
+                }
+                @media (max-width: 1024px) {
+                    width: 482px;
                 }
                 @media (max-width: 1000px) {
+                    width: 448px;
+                }
+                @media (max-width: 945px) {
+                    width: 410px;
+                }
+                @media (max-width: 863px) {
+                    width: 362px;
+                }
+                @media (max-width: 768px) {
                     width: 384px;
                 }
             }
@@ -429,14 +559,33 @@
             transition: width 1s ease-in-out;
 
             @media (max-width: 1400px) {
-                width: 523px;
+                width: 700px;
                 height: 494px !important;
                 border-radius: 30px;
             }
-            @media (max-width: 1390px) {
-                width: 623px;
+            @media (max-width: 1330px) {
+                width: 630px;
+            }
+            @media (max-width: 1257px) {
+                width: 548px;
+            }
+            @media (max-width: 1100px) {
+                width: 470px;
+            }
+            @media (max-width: 1024px) {
+                width: 482px;
+                height: 380px !important;
             }
             @media (max-width: 1000px) {
+                width: 448px;
+            }
+            @media (max-width: 945px) {
+                width: 410px;
+            }
+            @media (max-width: 863px) {
+                width: 362px;
+            }
+            @media (max-width: 768px) {
                 width: 384px;
                 height: 297px !important;
                 margin-right: 6px;
