--- a/storefront-child/build_assets/scss/blocks/_get-a-quote.scss
+++ b/storefront-child/build_assets/scss/blocks/_get-a-quote.scss
@@ -210,6 +210,9 @@
 
                 input[type=checkbox] {
                     margin: 0 0.2em 0 0;
+                    &::before {
+                        top: 60%;
+                    }
                 }
 
                 label {
