--- a/storefront-child/build_assets/scss/blocks/_shop.scss
+++ b/storefront-child/build_assets/scss/blocks/_shop.scss
@@ -172,7 +172,7 @@
                     left: 0;
                     background-color: $light-gray;
                     opacity: 0.8;
-                    z-index: 9;
+                    z-index: 99;
                     display: none;
                     &.open {
                         display: block;
@@ -211,6 +211,10 @@
                 cursor: pointer;
                 width: 200px;
                 margin-right: 24px;
+                &.open {
+                    position: relative;
+                    z-index: 100;
+                }
                 @media (max-width: 1008px) {
                     display: block;
                 }
@@ -253,7 +257,7 @@
                 border-radius: 20px;
                 padding: 32px 28px;
                 display: none;
-                z-index: 10;
+                z-index: 100;
                 @media (max-width: 630px) {
                     height: fit-content;
                     top: -54px;
