--- a/storefront-child/build_assets/scss/blocks/_text-image.scss
+++ b/storefront-child/build_assets/scss/blocks/_text-image.scss
@@ -63,6 +63,9 @@
                     color: $vineyard;
                 }
             }
+            &:last-child {
+                margin-bottom: 0;
+            }
        }
        &__button {
            margin-top: 4px;
